Atualizar o sexta.html

--- a/sexta.html
+++ b/sexta.html
@@ -3,14 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programação - Sexta</title>
+    <title>Programação - Sexta-feira</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Programação - Sexta-feira</h1>
-        <p><strong>MANHÃ</strong></p>
-        <!-- Aqui você pode inserir os horários e temas quando quiser -->
+        <h1 class="title">Sexta-feira</h1>
+        <p class="subtitle">“Boas novas de uma grande alegria que todo o povo terá” — <a href="#">Lucas 2:10</a></p>
+
+        <h2 class="section-title">Manhã</h2>
+        <ul class="schedule">
+            <li><strong>9:20</strong> Vídeo musical</li>
+            <li><strong>9:30</strong> <a href="#">Cântico 150</a> e oração</li>
+            <li><strong>9:40</strong> <span class="bold">DISCURSO DE ABERTURA:</span> Por que precisamos de boas novas? (<a href="#">1 Coríntios 9:16</a>; <a href="#">1 Timóteo 1:12</a>)</li>
+            <li><strong>10:10</strong> <span class="bold">VÍDEO PRINCIPAL:</span> <i>A História e o Ministério de Jesus: Episódio 1</i><br> 
+                <i>A Verdadeira Luz do Mundo — Parte I</i> (<a href="#">Mateus 1:18-25</a>; <a href="#">Lucas 1:1-80</a>; <a href="#">João 1:1-5</a>)
+            </li>
+            <li><strong>10:45</strong> <a href="#">Cântico 96</a> e anúncios</li>
+            <li><strong>10:55</strong> <span class="bold">SÉRIE DE DISCURSOS:</span> ‘Eles eram movidos por espírito santo’</li>
+            <ul class="sub-list">
+                <li>Mateus (<a href="#">2 Pedro 1:21</a>)</li>
+                <li>Marcos (<a href="#">Marcos 10:21</a>)</li>
+                <li>Lucas (<a href="#">Lucas 1:1-4</a>)</li>
+                <li>João (<a href="#">João 20:31</a>)</li>
+            </ul>
+            <li><strong>12:10</strong> <a href="#">Cântico 110</a> e intervalo</li>
+        </ul>
+
+        <h2 class="section-title">Tarde</h2>
+        <ul class="schedule">
+            <li><strong>1:35</strong> Vídeo musical</li>
+            <li><strong>1:45</strong> <a href="#">Cântico 117</a></li>
+            <li><strong>1:50</strong> <span class="bold">SÉRIE DE DISCURSOS:</span> Acredite na verdade sobre Jesus</li>
+            <ul class="sub-list">
+                <li>A Palavra (<a href="#">João 1:1</a>; <a href="#">Filipenses 2:8-11</a>)</li>
+                <li>Seu nome (<a href="#">Atos 4:12</a>)</li>
+                <li>Seu nascimento (<a href="#">Mateus 2:1, 2, 7-12, 16</a>)</li>
+            </ul>
+            <li><strong>2:30</strong> <a href="#">Cântico 99</a> e anúncios</li>
+            <li><strong>2:40</strong> <span class="bold">SÉRIE DE DISCURSOS:</span> Lições da terra de Jesus</li>
+            <ul class="sub-list">
+                <li>Geografia (<a href="#">Deuteronômio 8:7</a>)</li>
+                <li>Vida animal (<a href="#">Lucas 2:8, 24</a>)</li>
+                <li>Alimentos (<a href="#">Lucas 11:3</a>; <a href="#">1 Coríntios 10:31</a>)</li>
+                <li>Casa e rotina familiar (<a href="#">Filipenses 1:10</a>)</li>
+                <li>Vida em comunidade (<a href="#">Deuteronômio 22:4</a>)</li>
+                <li>Educação (<a href="#">Deuteronômio 6:6, 7</a>)</li>
+                <li>Adoração (<a href="#">Deuteronômio 16:15, 16</a>)</li>
+            </ul>
+            <li><strong>4:15</strong> “Boas novas eternas” — O que significam? (<a href="#">Apocalipse 14:6, 7</a>)</li>
+            <li><strong>4:50</strong> <a href="#">Cântico 66</a> e oração final</li>
+        </ul>
+
         <a href="index.html" class="voltar">← Voltar</a>
     </div>
 </body>
