Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Congresso 2025</h1>
-        <p>Escolha o dia para ver a programação:</p>
-        <nav>
-            <a href="sexta.html">Sexta-feira</a>
-            <a href="sabado.html">Sábado</a>
-            <a href="domingo.html">Domingo</a>
+        <h1 class="title">Congresso 2025</h1>
+        <p class="subtitle">Escolha um dia para ver a programação:</p>
+
+        <nav class="menu">
+            <a href="sexta.html" class="btn">Sexta-feira</a>
+            <a href="sabado.html" class="btn">Sábado</a>
+            <a href="domingo.html" class="btn">Domingo</a>
         </nav>
     </div>
 </body>
