--- a/sexta.html
+++ b/sexta.html
@@ -19,21 +19,21 @@
                 <div class="clickable" onclick="toggleTextarea('textarea940')">
                     <span class="bold">9:40 DISCURSO DE ABERTURA:</span> Por que precisamos de boas novas?
                 </div>
-                <textarea id="textarea940" wrap="soft" oninput="autoResizeTextarea(this)"></textarea>
+                <textarea id="textarea940" wrap="soft" oninput="saveText('textarea940')"></textarea>
             </li>
             <li>
                 <div class="clickable" onclick="toggleTextarea('textarea1010')">
                     <span class="bold">10:10 VÍDEO PRINCIPAL:</span> A História e o Ministério de Jesus: Episódio 1 <br> 
                     A Verdadeira Luz do Mundo — Parte I
                 </div>
-                <textarea id="textarea1010" wrap="soft" oninput="autoResizeTextarea(this)"></textarea>
+                <textarea id="textarea1010" wrap="soft" oninput="saveText('textarea1010')"></textarea>
             </li>
             <li><strong>10:45</strong> Cântico 96 e anúncios</li>
             <li>
                 <div class="clickable" onclick="toggleTextarea('textarea1055')">
                     <span class="bold">10:55 SÉRIE DE DISCURSOS:</span> ‘Eles eram movidos por espírito santo’
                 </div>
-                <textarea id="textarea1055" wrap="soft" oninput="autoResizeTextarea(this)"></textarea>
+                <textarea id="textarea1055" wrap="soft" oninput="saveText('textarea1055')"></textarea>
             </li>
             <ul class="sub-list">
                 <li>Mateus</li>
@@ -52,7 +52,7 @@
                 <div class="clickable" onclick="toggleTextarea('textarea150')">
                     <span class="bold">1:50 SÉRIE DE DISCURSOS:</span> Acredite na verdade sobre Jesus
                 </div>
-                <textarea id="textarea150" wrap="soft" oninput="autoResizeTextarea(this)"></textarea>
+                <textarea id="textarea150" wrap="soft" oninput="saveText('textarea150')"></textarea>
             </li>
             <ul class="sub-list">
                 <li>A Palavra</li>
@@ -64,7 +64,7 @@
                 <div class="clickable" onclick="toggleTextarea('textarea240')">
                     <span class="bold">2:40 SÉRIE DE DISCURSOS:</span> Lições da terra de Jesus
                 </div>
-                <textarea id="textarea240" wrap="soft" oninput="autoResizeTextarea(this)"></textarea>
+                <textarea id="textarea240" wrap="soft" oninput="saveText('textarea240')"></textarea>
             </li>
             <ul class="sub-list">
                 <li>Geografia</li>
@@ -95,6 +95,24 @@
                 autoResizeTextarea(textarea);
             }
         }
+
+        function saveText(id) {
+            const text = document.getElementById(id).value;
+            localStorage.setItem(id, text);
+        }
+
+        function loadSavedTexts() {
+            const textareas = document.querySelectorAll("textarea");
+            textareas.forEach(textarea => {
+                const savedText = localStorage.getItem(textarea.id);
+                if (savedText) {
+                    textarea.value = savedText;
+                    autoResizeTextarea(textarea);
+                }
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", loadSavedTexts);
     </script>
 </body>
 </html>
