--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
             <a href="domingo.html" class="btn">Domingo</a>
         </nav>
     </div>
+    <script>
+    if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("sw.js").then(() => {
+            console.log("Service Worker registrado com sucesso!");
+        }).catch((error) => {
+            console.error("Erro ao registrar o Service Worker:", error);
+        });
+    }
+</script>
 </body>
 </html>
