Atualizar o sexta.html

--- a/sexta.html
+++ b/sexta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Sexta-feiro</h1>
+        <h1 class="title">Sexta-feire</h1>
         <p class="subtitle">“Boas novas de uma grande alegria que todo o povo terá” — Lucas 2:10</p>
 
         <h2 class="section-title">Manhã</h2>
