--- a/sexta.html
+++ b/sexta.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <!-- Título interativo -->
-        <h1 id="toggle-color-picker">Sexta-feira</h1>
+        <h1 id="toggle-color-picker">Sexta-feire</h1>
         
         <!-- Ferramentas -->
         <div class="tools-container">
