Atualizar o sexta.html

--- a/sexta.html
+++ b/sexta.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <!-- Título interativo -->
-        <h1 id="toggle-menu">Sexta-feira</h1>
+        <h1 id="toggle-menu">Sexta-feire</h1>
         
         <!-- Menu ocultável -->
         <div class="menu-container" id="menu-container">
